# notal

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/home/danghuynh/dev/be/agent-note-workspace/plans/260311-1526-recall-smart-note-app/reports/: fullstack-developer-260311-1613-phase-03-llm-provider-abstraction.md  fullstack-developer-260311-1617-phase-04-core-note-operations.md  fullstack-developer-260311-1630-phase-05-frontend-ui.md  fullstack-developer-260311-1654-phase-07-system-integration.md
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: capture.rs  consolidation.rs  memory.rs  mod.rs  notes.rs  search.rs  settings.rs
src-tauri/src/db/: connection.rs  migrations.rs  mod.rs  schema.rs
src-tauri/src/llm/: fallback.rs  gemini.rs  mod.rs  ollama.rs  provider.rs  types.rs
src-tauri/src/memory/: consolidation.rs  decay.rs  mod.rs  promotion.rs
src-tauri/src/models/: memory_layer.rs  mod.rs  note.rs  settings.rs
src-tauri/src/services/: clipboard.rs  file_watcher.rs  hotkeys.rs  mod.rs  tray.rs
src-tauri/src/services/enrichment/: mod.rs  rules.rs
src/components/: clipboard-notification.tsx  clipboard-toast-window.tsx  screenshot-capture-overlay.tsx  screenshot-capture-window.tsx
src/hooks/: use-ask.ts  use-memory.ts  use-notes.ts  use-settings.ts
src/services/: tauri-commands.ts
src/types/: index.ts
(+22 files in other folders)
